# Void-and-Function-Pointers-2

./: CMakeLists.txt  Makefile  cscd240Lab15.c  cscd240Lab15out.txt  cscd240Lab15val  simpleOutput.txt
genericArray/: genericArray.c  genericArray.h
utils/: fileUtils.c  fileUtils.h  utils.c  utils.h
words/: word.c  word.h
